# feedback-controller

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
example/: CMakeLists.txt  graph_log.py
example/bangbang_range_sim/: CMakeLists.txt  main.cpp
example/bangbang_setpoint_sim/: CMakeLists.txt  main.cpp
example/bangbang_sim/: CMakeLists.txt  main.cpp
example/components/feedback_controller/plugins/actuators/include/: gpio_actuator.hpp
example/components/feedback_controller/plugins/feedback/include/: adc_feedback.hpp
example/components/feedback_controller/plugins/laws/include/: bangbang.hpp  bangbang_range.hpp  bangbang_setpoint.hpp
example/components/hal/include/: adc_interface.hpp  gpio_interface.hpp
example/components/sim/hal/: CMakeLists.txt
example/components/sim/hal/include/: adc.hpp  gpio.hpp
example/components/sim/hal/src/: adc.cpp  gpio.cpp
example/performance_analysis/: CMakeLists.txt
example/performance_analysis/simple/: CMakeLists.txt  main.cpp  simple_perf
example/performance_analysis/template/: CMakeLists.txt  main.cpp
include/: feedback_controller_interface.hpp
